[gd_scene load_steps=58 format=3 uid="uid://2yvq6yiiep7y"]

[ext_resource type="Texture2D" uid="uid://bkgp3pb17nuvb" path="res://assets/title-card.png" id="1_ekxnf"]
[ext_resource type="Script" uid="uid://b4e7xyjnkrrsn" path="res://scenes/main_menu.gd" id="1_lgwnu"]
[ext_resource type="AudioStream" uid="uid://d3a35bsh0nw3j" path="res://assets/audio/record_scratch.mp3" id="2_5dd4i"]
[ext_resource type="Texture2D" uid="uid://csuimqp6o7aft" path="res://assets/sound-visual-wobble.png" id="2_bqqt6"]
[ext_resource type="AudioStream" uid="uid://bee36rg6asj4b" path="res://assets/audio/main_menu.mp3" id="2_tbmy8"]
[ext_resource type="Texture2D" uid="uid://ckpxdx6m41qr7" path="res://assets/ufo.png" id="3_bqqt6"]
[ext_resource type="Texture2D" uid="uid://bcr5itf0vwsr1" path="res://assets/alien-character.png" id="4_8ln24"]
[ext_resource type="Texture2D" uid="uid://5c1qhwxh1x4p" path="res://assets/cassette.png" id="5_rtw2f"]
[ext_resource type="Texture2D" uid="uid://b1w8wysw6hnx3" path="res://assets/enemy.png" id="6_rtw2f"]
[ext_resource type="Texture2D" uid="uid://brb2ltpvce427" path="res://assets/effects.png" id="7_oa1go"]
[ext_resource type="Theme" uid="uid://c2wda1tq64nkw" path="res://themes/base_theme.tres" id="9_jk1qb"]
[ext_resource type="Texture2D" uid="uid://cce60urqx1kob" path="res://assets/inputs/input6.png" id="12_5pajh"]
[ext_resource type="Texture2D" uid="uid://dh40uihhy606j" path="res://assets/alien-splash.png" id="12_flqon"]
[ext_resource type="Texture2D" uid="uid://buow7u0esrrvh" path="res://assets/inputs/input5.png" id="13_j7ex8"]
[ext_resource type="AudioStream" uid="uid://wu3gl05xjxva" path="res://assets/audio/yo.mp3" id="13_rcqid"]
[ext_resource type="PackedScene" uid="uid://c4xwr4jquqqv1" path="res://scenes/credits.tscn" id="14_1ajci"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wu84c"]
atlas = ExtResource("2_bqqt6")
region = Rect2(0, 0, 144, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ln24"]
atlas = ExtResource("2_bqqt6")
region = Rect2(144, 0, 144, 104)

[sub_resource type="SpriteFrames" id="SpriteFrames_rtw2f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu84c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ln24")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_rtw2f"]
atlas = ExtResource("3_bqqt6")
region = Rect2(0, 0, 14, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa1go"]
atlas = ExtResource("3_bqqt6")
region = Rect2(14, 0, 14, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbmy8"]
atlas = ExtResource("3_bqqt6")
region = Rect2(28, 0, 14, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk1qb"]
atlas = ExtResource("3_bqqt6")
region = Rect2(42, 0, 14, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dd4i"]
atlas = ExtResource("3_bqqt6")
region = Rect2(56, 0, 14, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgwnu"]
atlas = ExtResource("3_bqqt6")
region = Rect2(70, 0, 14, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_flqon"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtw2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa1go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbmy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk1qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dd4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgwnu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_flqon"]
atlas = ExtResource("4_8ln24")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcqid"]
atlas = ExtResource("4_8ln24")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ajci"]
atlas = ExtResource("4_8ln24")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b55j"]
atlas = ExtResource("4_8ln24")
region = Rect2(208, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5pajh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_flqon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcqid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ajci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b55j")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_j7ex8"]
atlas = ExtResource("5_rtw2f")
region = Rect2(0, 0, 14, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8gd2"]
atlas = ExtResource("5_rtw2f")
region = Rect2(14, 0, 14, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_hstxw"]
atlas = ExtResource("5_rtw2f")
region = Rect2(28, 0, 14, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_8egab"]
atlas = ExtResource("5_rtw2f")
region = Rect2(42, 0, 14, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_gw5y6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7ex8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8gd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hstxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8egab")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_svtp6"]
atlas = ExtResource("4_8ln24")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dfpl"]
atlas = ExtResource("4_8ln24")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qywvv"]
atlas = ExtResource("4_8ln24")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wgol"]
atlas = ExtResource("4_8ln24")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1acrt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svtp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dfpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qywvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wgol")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5pajh"]
atlas = ExtResource("6_rtw2f")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw5y6"]
atlas = ExtResource("6_rtw2f")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1acrt"]
atlas = ExtResource("6_rtw2f")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr8o3"]
atlas = ExtResource("6_rtw2f")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1a85y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pajh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw5y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1acrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr8o3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1a85y"]
atlas = ExtResource("7_oa1go")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5e0"]
atlas = ExtResource("7_oa1go")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_engjn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a85y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5e0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6h3lr"]
atlas = ExtResource("7_oa1go")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj67d"]
atlas = ExtResource("7_oa1go")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6vcge"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h3lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj67d")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_flqon"]
colors = PackedColorArray(0.15294118, 0.15294118, 0.26666668, 1, 0.15294118, 0.15294118, 0.26666668, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rcqid"]
gradient = SubResource("Gradient_flqon")

[sub_resource type="Animation" id="Animation_flqon"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(71, 240)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AudioStreamPlayer2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1ajci"]
resource_name = "jump_up"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 2, 0.5),
"update": 0,
"values": [Vector2(72, 88), Vector2(72, 80), Vector2(72, 88)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AudioStreamPlayer2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7b55j"]
_data = {
&"RESET": SubResource("Animation_flqon"),
&"jump_up": SubResource("Animation_1ajci")
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_lgwnu")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -6.0
offset_top = -7.0
offset_right = 296.0
offset_bottom = 195.0
color = Color(0.15294118, 0.15294118, 0.26666668, 1)

[node name="TitleCard" type="Sprite2D" parent="."]
position = Vector2(148, 91)
texture = ExtResource("1_ekxnf")

[node name="RecordScratches" type="AudioStreamPlayer2D" parent="."]
position = Vector2(76, 11)
stream = ExtResource("2_5dd4i")

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
position = Vector2(76, 11)
stream = ExtResource("2_tbmy8")
autoplay = true

[node name="wiggles" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(148, 118)
sprite_frames = SubResource("SpriteFrames_rtw2f")
autoplay = "default"
frame_progress = 0.51441544

[node name="ufo" type="AnimatedSprite2D" parent="."]
position = Vector2(110, 72)
sprite_frames = SubResource("SpriteFrames_flqon")
autoplay = "default"
frame_progress = 0.28782275

[node name="breakdoewn" type="AnimatedSprite2D" parent="."]
position = Vector2(98, 48)
sprite_frames = SubResource("SpriteFrames_5pajh")
autoplay = "default"
frame_progress = 0.48952925

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(202, 28)
sprite_frames = SubResource("SpriteFrames_gw5y6")
autoplay = "default"
frame_progress = 0.7955972

[node name="walk" type="AnimatedSprite2D" parent="."]
position = Vector2(194, 55)
sprite_frames = SubResource("SpriteFrames_1acrt")
autoplay = "default"
frame_progress = 0.2718085

[node name="enemy" type="AnimatedSprite2D" parent="."]
position = Vector2(88, 27)
sprite_frames = SubResource("SpriteFrames_1a85y")
autoplay = "default"
frame_progress = 0.27965763
flip_h = true

[node name="note1" type="AnimatedSprite2D" parent="."]
position = Vector2(209, 47)
sprite_frames = SubResource("SpriteFrames_engjn")
autoplay = "default"
frame_progress = 0.7179915

[node name="note2" type="AnimatedSprite2D" parent="."]
position = Vector2(88, 60)
sprite_frames = SubResource("SpriteFrames_6vcge")
autoplay = "default"
frame_progress = 0.6782206

[node name="Label" type="Label" parent="."]
offset_left = 59.0
offset_top = 67.0
offset_right = 243.0
offset_bottom = 90.0
theme = ExtResource("9_jk1qb")
theme_override_colors/font_color = Color(0.9490196, 0.827451, 0.67058825, 1)
text = "Press     to play game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(141, 80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_5pajh")

[node name="Label2" type="Label" parent="."]
offset_left = 58.0
offset_top = 78.0
offset_right = 242.0
offset_bottom = 101.0
theme = ExtResource("9_jk1qb")
theme_override_colors/font_color = Color(0.9490196, 0.827451, 0.67058825, 1)
text = "or press     for credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(147, 90)
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_j7ex8")

[node name="Node2D" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(71, 240)

[node name="Background" type="Sprite2D" parent="Node2D"]
position = Vector2(74.99999, -87.99999)
scale = Vector2(0.625, 176)
texture = SubResource("GradientTexture1D_rcqid")

[node name="AlienSplash" type="Sprite2D" parent="Node2D"]
position = Vector2(75, 14)
texture = ExtResource("12_flqon")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D"]
root_node = NodePath("../AlienSplash")
libraries = {
&"": SubResource("AnimationLibrary_7b55j")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Node2D"]
stream = ExtResource("13_rcqid")

[node name="Credits" parent="." instance=ExtResource("14_1ajci")]
visible = false

[connection signal="finished" from="RecordScratches" to="." method="_on_record_scratches_finished"]
[connection signal="finished" from="BGM" to="." method="_on_bgm_finished"]
[connection signal="animation_finished" from="Node2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
